# truck-fleet-managment

./: docker-compose.yaml
api/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.tsx  truckfleet.db  verify.py
api/alembic/versions/: 95052e2a2a13_create_maintenance_table.py
api/crud/: drivers.py  generate_metrics.py  jobs.py  maintenance.py  metric.py  trucks.py
api/db/: session.py
api/endpoints/: drivers.py  jobs.py  maintanence.py  metric.py  scheduler.py  trucks.py
api/models/: __init__.py  drivers.py  jobs.py  maintenance.py  metric.py  trucks.py
api/schemas/: drivers.py  jobs.py  maintenance.py  metric.py  trucks.py
api/scripts/: seed_database.py
front-end/: .dockerignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
front-end/src/: App.tsx  index.css  index.html  main.tsx  routeTree.gen.ts  types.ts
front-end/src/components/: LogisticsErrorPage.tsx  dashboard.tsx  data-table-builder.tsx  data-table-example.tsx  data-table-test.tsx  data-table-types.ts  data-table.tsx  debug-constructor.tsx  driverProfile.tsx  layout.tsx  performanceIndicator.tsx  statusBadge.tsx  test-filter.tsx
front-end/src/components/custom/: ObjectDebugger.tsx
front-end/src/components/forms/: driversForms.tsx  jobsForm.tsx  (+1 more)
front-end/src/lib/: data.ts  useEntityDetails.ts
front-end/src/pages/: Drivers.tsx  Jobs.tsx  Trucks.tsx
front-end/src/routes/: About.tsx  DataTest.tsx  Drivers.tsx  Jobs.tsx  NotFound.tsx  Trucks.tsx  __root.tsx  index.tsx
front-end/src/services/: api.ts  db.ts
front-end/src/types/: index.ts
(+11 files in other folders)
