[project]
name = "truck-fleet-managment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
mendez = "uvicorn main:app --reload"

# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"