[project]
name = "truck-fleet-managment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "apscheduler>=3.11.0",
    "faker>=37.4.0",
    "fastapi[standard]>=0.115.12",
    "filelock>=3.18.0",
    "pydantic>=2.11.5",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
mendez = "uvicorn main:app --reload"

# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"